feat: create pet api document in openapi.yaml
