# server/routes/petRoute.js
@@ -6,7 +6,7 @@ const petRoute = express.Router();
 petRoute.get("/", petController.findPets);
 petRoute.post("/", petController.createPet);
 petRoute.put("/:pet_id", petController.updatePet);
-petRoute.delete("/", petController.deletePet);
+petRoute.delete("/:pet_id", petController.deletePet);
 petRoute.put("/:pet_id/on-hold/:email", petController.setPetOnHold);
 petRoute.put("/:pet_id/adopted/:email", petController.setPetAdopted);
 
